--- a/languages/ci/locale/hu_HU/LC_MESSAGES/auberge_lang_if.po
+++ b/languages/ci/locale/hu_HU/LC_MESSAGES/auberge_lang_if.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-07-30 20:21+0300\n"
-"PO-Revision-Date: 2013-06-16 18:51+0200\n"
+"PO-Revision-Date: 2013-07-30 20:40+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -3281,9 +3280,8 @@ msgid "Filter by Landmarks"
 msgstr "Szűrés Mérföldkövek szerint"
 
 #: ../code/application/views/city_view.php:152
-#, fuzzy
 msgid "Click here to expand map"
-msgstr "Kattintson a nagyitáshoz"
+msgstr "A térkép nagyításához kattintson ide"
 
 #: ../code/application/views/city_view.php:161
 #: ../code/application/views/city_view.php:431
@@ -4381,7 +4379,7 @@ msgstr "%d teljes kollégiumi szobát fog használni."
 #: ../code/application/views/hb/booking_avail_view.php:643
 #, php-format
 msgid "%d %s ( %s )"
-msgstr ""
+msgstr "%d %s ( %s )"
 
 #: ../code/application/views/hw/booking_avail_view.php:358
 #: ../code/application/views/hb/booking_avail_view.php:344
@@ -4971,9 +4969,9 @@ msgstr ""
 #: ../code/application/views/hb/reviews.php:2
 #: ../code/application/views/helpfile/pofields.php~:890
 #: ../code/application/views/helpfile/pofields.php:890
-#, fuzzy, php-format
+#, php-format
 msgid "Click here to see info and prices"
-msgstr "Az ingatlan kiválasztásához kattintson ide"
+msgstr "Az információk és az árak megtekintéséhez kattintson ide"
 
 #: ../code/application/views/hw/hostel_view.php:763
 #: ../code/application/views/hb/hostel_view.php:1034
@@ -5041,7 +5039,7 @@ msgstr ""
 #: ../code/application/views/helpfile/pofields.php:889
 #, php-format
 msgid "The benefits"
-msgstr ""
+msgstr "Előnyök"
 
 #: ../code/application/views/hb/booking_view.php:245
 #: ../code/application/views/helpfile/pofields.php~:870
@@ -5123,7 +5121,7 @@ msgstr ""
 
 #: ../code/application/views/hb/property_list.php:112
 msgid "80% +"
-msgstr ""
+msgstr "80% +"
 
 #: ../code/application/views/hb/hostel_view.php:899
 msgid "Purchasable Extras"
@@ -9093,7 +9091,7 @@ msgstr "Saját fiók"
 #: ../code/application/views/helpfile/pofields.php:899
 #, php-format
 msgid "Please read carefully"
-msgstr "Kérem, olvassa el figyelmesen"
+msgstr "Kérjük, olvassa el figyelmesen"
 
 #: ../code/application/views/helpfile/pofields.php~:867
 #: ../code/application/views/helpfile/pofields.php~:900
@@ -9101,7 +9099,7 @@ msgstr "Kérem, olvassa el figyelmesen"
 #: ../code/application/views/helpfile/pofields.php:900
 #, php-format
 msgid "I agree"
-msgstr "Egyetértek"
+msgstr "Elfogadom"
 
 #: ../code/application/views/helpfile/pofields.php~:868
 #: ../code/application/views/helpfile/pofields.php~:901
@@ -9109,7 +9107,7 @@ msgstr "Egyetértek"
 #: ../code/application/views/helpfile/pofields.php:901
 #, php-format
 msgid "I do not agree and I will select another property"
-msgstr "Nem értek egyet, és másik ingatlant választok"
+msgstr "Nem fogadom el és egy másik ingatlant választok"
 
 #: ../code/application/views/helpfile/pofields.php~:869
 #: ../code/application/views/helpfile/pofields.php:869
@@ -9222,45 +9220,45 @@ msgstr "Ezt az ingatlant mentse el a kedvencek közé"
 
 #: ../code/application/views/helpfile/pofields.php~:892
 #: ../code/application/views/helpfile/pofields.php:892
-#, fuzzy, php-format
+#, php-format
 msgid "Filter by Landmarks, train stations, airports..."
-msgstr "Szűrés Mérföldkövek szerint (2 km-en belül)"
+msgstr "Szűrés a következők szerint Mérföldkövek, vasútállomások, repterek…"
 
 #: ../code/application/views/helpfile/pofields.php~:893
 #: ../code/application/views/helpfile/pofields.php:893
-#, fuzzy, php-format
+#, php-format
 msgid "Expand the map"
-msgstr "Térkép kiterjesztése"
+msgstr "Térkép megnagyítása"
 
 #: ../code/application/views/helpfile/pofields.php~:894
 #: ../code/application/views/helpfile/pofields.php:894
-#, fuzzy, php-format
+#, php-format
 msgid "Select to compare"
-msgstr "Válaszd ki a kártyát."
+msgstr "Kiválaszás az összehasonlításhoz"
 
 #: ../code/application/views/helpfile/pofields.php~:895
 #: ../code/application/views/helpfile/pofields.php:895
-#, fuzzy, php-format
+#, php-format
 msgid "Click here to compare"
-msgstr "Kérem, kattintson ide az összehasonlításhoz"
+msgstr "Az összehasonlításhoz kattintson ide"
 
 #: ../code/application/views/helpfile/pofields.php~:896
 #: ../code/application/views/helpfile/pofields.php:896
-#, fuzzy, php-format
+#, php-format
 msgid "Change dates and currency"
-msgstr "Dátum változtatása"
+msgstr "Dátumok és valuta megváltoztatása"
 
 #: ../code/application/views/helpfile/pofields.php~:897
 #: ../code/application/views/helpfile/pofields.php:897
-#, fuzzy, php-format
+#, php-format
 msgid "Click to expand map"
-msgstr "Kattintson a nagyitáshoz"
+msgstr "A térkép nagyításához kattintson ide"
 
 #: ../code/application/views/helpfile/pofields.php~:898
 #: ../code/application/views/helpfile/pofields.php:898
 #, php-format
 msgid "Travel-Insurance"
-msgstr ""
+msgstr "Utasbiztosítás"
 
 #: ../code/application/views/helpfile/pofields.php:902
 #, fuzzy, php-format
