--- a/languages/ci/locale/ru_RU/LC_MESSAGES/auberge_lang_xo.po
+++ b/languages/ci/locale/ru_RU/LC_MESSAGES/auberge_lang_xo.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-07-30 20:21+0300\n"
-"PO-Revision-Date: 2013-07-07 16:18+0200\n"
+"PO-Revision-Date: 2013-07-30 20:52+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -3290,9 +3289,8 @@ msgid "Filter by Landmarks"
 msgstr "Фильтр по ориентирам"
 
 #: ../code/application/views/city_view.php:152
-#, fuzzy
 msgid "Click here to expand map"
-msgstr "Нажмите, чтобы увеличить"
+msgstr "Нажмите, чтобы увеличить карту"
 
 #: ../code/application/views/city_view.php:161
 #: ../code/application/views/city_view.php:431
@@ -9276,38 +9274,38 @@ msgstr "Увеличить карту"
 
 #: ../code/application/views/helpfile/pofields.php~:894
 #: ../code/application/views/helpfile/pofields.php:894
-#, fuzzy, php-format
+#, php-format
 msgid "Select to compare"
-msgstr "Выберите карту"
+msgstr "К сравнению"
 
 #: ../code/application/views/helpfile/pofields.php~:895
 #: ../code/application/views/helpfile/pofields.php:895
-#, fuzzy, php-format
+#, php-format
 msgid "Click here to compare"
-msgstr "Пожалуйста, нажмите здесь, чтобы сравнить"
+msgstr "Нажмите здесь, чтобы сравнить"
 
 #: ../code/application/views/helpfile/pofields.php~:896
 #: ../code/application/views/helpfile/pofields.php:896
-#, fuzzy, php-format
+#, php-format
 msgid "Change dates and currency"
-msgstr "Изменить даты"
+msgstr "Изменить даты и валюту"
 
 #: ../code/application/views/helpfile/pofields.php~:897
 #: ../code/application/views/helpfile/pofields.php:897
-#, fuzzy, php-format
+#, php-format
 msgid "Click to expand map"
-msgstr "Нажмите, чтобы увеличить"
+msgstr "Нажмите, чтобы увеличить карту"
 
 #: ../code/application/views/helpfile/pofields.php~:898
 #: ../code/application/views/helpfile/pofields.php:898
 #, php-format
 msgid "Travel-Insurance"
-msgstr ""
+msgstr "Туристическое-Страхование"
 
 #: ../code/application/views/helpfile/pofields.php:902
-#, fuzzy, php-format
+#, php-format
 msgid "Click here to see the benefits"
-msgstr "Нажмите здесь, чтобы выбрать этот отель"
+msgstr "Нажмите здесь, чтобы увидеть преимущества"
 
 #: ../code/application/views/review_empty.php:2
 #: ../code/application/views/review_empty-map.php:7
