Translate ja and ko

--- a/languages/ci/locale/ko_KR/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/ko_KR/LC_MESSAGES/auberge_lang.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-07-30 20:21+0300\n"
-"PO-Revision-Date: 2013-06-28 21:11+0200\n"
+"PO-Revision-Date: 2013-07-30 21:25+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -4923,7 +4922,7 @@ msgstr "이 견적의 PDF 사본을 받거나 보내고 싶으세요?"
 #: ../code/application/views/helpfile/pofields.php:890
 #, php-format
 msgid "Click here to see info and prices"
-msgstr "전체적인 평가"
+msgstr "정보 및 가격을 보려면 여기를 클릭하십시오"
 
 #: ../code/application/views/hw/hostel_view.php:763
 #: ../code/application/views/hb/hostel_view.php:1034
@@ -4990,7 +4989,7 @@ msgstr ""
 #: ../code/application/views/helpfile/pofields.php:889
 #, php-format
 msgid "The benefits"
-msgstr ""
+msgstr "혜택"
 
 #: ../code/application/views/hb/booking_view.php:245
 #: ../code/application/views/helpfile/pofields.php~:870
@@ -8994,7 +8993,7 @@ msgstr "주의 깊게 읽어주십시오"
 #: ../code/application/views/helpfile/pofields.php:900
 #, php-format
 msgid "I agree"
-msgstr "동의합니다"
+msgstr "동의"
 
 #: ../code/application/views/helpfile/pofields.php~:868
 #: ../code/application/views/helpfile/pofields.php~:901
@@ -9002,7 +9001,7 @@ msgstr "동의합니다"
 #: ../code/application/views/helpfile/pofields.php:901
 #, php-format
 msgid "I do not agree and I will select another property"
-msgstr "동의하지 않고 또 다른 호텔을 선택할 것입니다."
+msgstr "나는 동의하지 않으며 다른 숙소를 선택할 것입니다."
 
 #: ../code/application/views/helpfile/pofields.php~:869
 #: ../code/application/views/helpfile/pofields.php:869
@@ -9109,45 +9108,45 @@ msgstr "즐겨 찾기로 이 호텔을 저장"
 
 #: ../code/application/views/helpfile/pofields.php~:892
 #: ../code/application/views/helpfile/pofields.php:892
-#, fuzzy, php-format
+#, php-format
 msgid "Filter by Landmarks, train stations, airports..."
-msgstr "랜드마크(2km 이내)로 조회"
+msgstr "랜드 마크, 기차역, 공항으로 필터링하기 ..."
 
 #: ../code/application/views/helpfile/pofields.php~:893
 #: ../code/application/views/helpfile/pofields.php:893
-#, fuzzy, php-format
+#, php-format
 msgid "Expand the map"
-msgstr "지도 확장하기"
+msgstr "지도를 확대하기"
 
 #: ../code/application/views/helpfile/pofields.php~:894
 #: ../code/application/views/helpfile/pofields.php:894
-#, fuzzy, php-format
+#, php-format
 msgid "Select to compare"
-msgstr "카드를 선택하세요."
+msgstr "비교하기 선택"
 
 #: ../code/application/views/helpfile/pofields.php~:895
 #: ../code/application/views/helpfile/pofields.php:895
-#, fuzzy, php-format
+#, php-format
 msgid "Click here to compare"
 msgstr "비교하기 위해 여기를 클릭하십시오"
 
 #: ../code/application/views/helpfile/pofields.php~:896
 #: ../code/application/views/helpfile/pofields.php:896
-#, fuzzy, php-format
+#, php-format
 msgid "Change dates and currency"
-msgstr "날짜 변경"
+msgstr "날짜 및 통화 변경하기"
 
 #: ../code/application/views/helpfile/pofields.php~:897
 #: ../code/application/views/helpfile/pofields.php:897
-#, fuzzy, php-format
+#, php-format
 msgid "Click to expand map"
-msgstr "확대시 이곳을 클릭하시오."
+msgstr "지도를 클릭하여 확장하기"
 
 #: ../code/application/views/helpfile/pofields.php~:898
 #: ../code/application/views/helpfile/pofields.php:898
 #, php-format
 msgid "Travel-Insurance"
-msgstr ""
+msgstr "여행 보험"
 
 #: ../code/application/views/helpfile/pofields.php:902
 #, fuzzy, php-format
