--- a/languages/ci/locale/ja_JP/LC_MESSAGES/auberge_lang_ho.po
+++ b/languages/ci/locale/ja_JP/LC_MESSAGES/auberge_lang_ho.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-07-30 20:21+0300\n"
-"PO-Revision-Date: 2013-06-28 21:13+0200\n"
+"PO-Revision-Date: 2013-07-30 21:29+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -8993,7 +8992,7 @@ msgstr "マイアカウント"
 #: ../code/application/views/helpfile/pofields.php:899
 #, php-format
 msgid "Please read carefully"
-msgstr "よくご覧下さい"
+msgstr "よくお読みください"
 
 #: ../code/application/views/helpfile/pofields.php~:867
 #: ../code/application/views/helpfile/pofields.php~:900
@@ -9001,7 +9000,7 @@ msgstr "よくご覧下さい"
 #: ../code/application/views/helpfile/pofields.php:900
 #, php-format
 msgid "I agree"
-msgstr "同意します"
+msgstr "同意する"
 
 #: ../code/application/views/helpfile/pofields.php~:868
 #: ../code/application/views/helpfile/pofields.php~:901
@@ -9009,7 +9008,7 @@ msgstr "同意します"
 #: ../code/application/views/helpfile/pofields.php:901
 #, php-format
 msgid "I do not agree and I will select another property"
-msgstr "同意しません、別な施設を選択します"
+msgstr "同意しないので別な施設を選択します。"
 
 #: ../code/application/views/helpfile/pofields.php~:869
 #: ../code/application/views/helpfile/pofields.php:869
@@ -9114,45 +9113,45 @@ msgstr "この施設をお気に入りに登録する。"
 
 #: ../code/application/views/helpfile/pofields.php~:892
 #: ../code/application/views/helpfile/pofields.php:892
-#, fuzzy, php-format
+#, php-format
 msgid "Filter by Landmarks, train stations, airports..."
-msgstr "ランドマークから検索する（2キロ以内）"
+msgstr "ランドマーク、駅、空港別にフィルターにかける"
 
 #: ../code/application/views/helpfile/pofields.php~:893
 #: ../code/application/views/helpfile/pofields.php:893
-#, fuzzy, php-format
+#, php-format
 msgid "Expand the map"
-msgstr "拡大した地図"
+msgstr "地図を拡大"
 
 #: ../code/application/views/helpfile/pofields.php~:894
 #: ../code/application/views/helpfile/pofields.php:894
-#, fuzzy, php-format
+#, php-format
 msgid "Select to compare"
-msgstr "カードを選択してください"
+msgstr "比較するために選択する"
 
 #: ../code/application/views/helpfile/pofields.php~:895
 #: ../code/application/views/helpfile/pofields.php:895
-#, fuzzy, php-format
+#, php-format
 msgid "Click here to compare"
-msgstr "比較はこちらをクリック"
+msgstr "比較するにはこちらをクリック"
 
 #: ../code/application/views/helpfile/pofields.php~:896
 #: ../code/application/views/helpfile/pofields.php:896
-#, fuzzy, php-format
+#, php-format
 msgid "Change dates and currency"
-msgstr "日にちを変更"
+msgstr "日付と通貨を変更する"
 
 #: ../code/application/views/helpfile/pofields.php~:897
 #: ../code/application/views/helpfile/pofields.php:897
-#, fuzzy, php-format
+#, php-format
 msgid "Click to expand map"
-msgstr "クリックすると拡大します"
+msgstr "地図を拡大するためにクリック"
 
 #: ../code/application/views/helpfile/pofields.php~:898
 #: ../code/application/views/helpfile/pofields.php:898
 #, php-format
 msgid "Travel-Insurance"
-msgstr ""
+msgstr "旅行保険"
 
 #: ../code/application/views/helpfile/pofields.php:902
 #, fuzzy, php-format
