--- a/languages/ci/locale/fi_FI/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/fi_FI/LC_MESSAGES/auberge_lang.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-07-30 20:21+0300\n"
-"PO-Revision-Date: 2013-06-28 21:30+0200\n"
+"PO-Revision-Date: 2013-07-30 21:40+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -9073,7 +9072,7 @@ msgstr "Oma tili"
 #: ../code/application/views/helpfile/pofields.php:899
 #, php-format
 msgid "Please read carefully"
-msgstr "Ole hyvä ja lue tarkasti"
+msgstr "Lue huolellisesti"
 
 #: ../code/application/views/helpfile/pofields.php~:867
 #: ../code/application/views/helpfile/pofields.php~:900
@@ -9201,45 +9200,45 @@ msgstr "Tallenna tämä majoitus suosikkina"
 
 #: ../code/application/views/helpfile/pofields.php~:892
 #: ../code/application/views/helpfile/pofields.php:892
-#, fuzzy, php-format
+#, php-format
 msgid "Filter by Landmarks, train stations, airports..."
-msgstr "Suodata Maamerkkien perusteella (2 km alueella)"
+msgstr "Suodatan maamerkkien, junaasemien, lentokenttien..."
 
 #: ../code/application/views/helpfile/pofields.php~:893
 #: ../code/application/views/helpfile/pofields.php:893
-#, fuzzy, php-format
+#, php-format
 msgid "Expand the map"
 msgstr "Laajenna karttaa"
 
 #: ../code/application/views/helpfile/pofields.php~:894
 #: ../code/application/views/helpfile/pofields.php:894
-#, fuzzy, php-format
+#, php-format
 msgid "Select to compare"
-msgstr "Valitse kortti"
+msgstr "Valitse verratakseen"
 
 #: ../code/application/views/helpfile/pofields.php~:895
 #: ../code/application/views/helpfile/pofields.php:895
-#, fuzzy, php-format
+#, php-format
 msgid "Click here to compare"
-msgstr "Ole hyvä ja paina tähän vertaukseksi"
+msgstr "Paina tähän verratakseen"
 
 #: ../code/application/views/helpfile/pofields.php~:896
 #: ../code/application/views/helpfile/pofields.php:896
-#, fuzzy, php-format
+#, php-format
 msgid "Change dates and currency"
-msgstr "Muuta päivämäärät"
+msgstr "Vaihda päivämäärä ja valuutta"
 
 #: ../code/application/views/helpfile/pofields.php~:897
 #: ../code/application/views/helpfile/pofields.php:897
-#, fuzzy, php-format
+#, php-format
 msgid "Click to expand map"
-msgstr "Klikkaa suurentaaksesi"
+msgstr "Paina tähän laajentaakseen karttaa"
 
 #: ../code/application/views/helpfile/pofields.php~:898
 #: ../code/application/views/helpfile/pofields.php:898
 #, php-format
 msgid "Travel-Insurance"
-msgstr ""
+msgstr "Matkavakuutus"
 
 #: ../code/application/views/helpfile/pofields.php:902
 #, fuzzy, php-format
