--- a/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang_aj.po
+++ b/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang_aj.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-07-30 21:52+0300\n"
-"PO-Revision-Date: 2013-07-30 20:34+0200\n"
+"PO-Revision-Date: 2013-08-01 21:36+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
 "Language: es\n"
@@ -9366,121 +9366,122 @@ msgstr "Haga clic aquí para ver los beneficios"
 #, php-format
 msgid "Only available to %s Customers! No surprises and peace of mind"
 msgstr ""
+"¡Disponible solamente para Clientes %s! Sin sorpresas y para su tranquilidad"
 
 #: ../code/application/views/helpfile/pofields.php:904
-#, fuzzy, php-format
+#, php-format
 msgid "%s/day/person"
-msgstr "%d personas"
+msgstr "%s/día/persona"
 
 #: ../code/application/views/helpfile/pofields.php:905
 #, php-format
 msgid "- 36 years old"
-msgstr ""
+msgstr "-36 años"
 
 #: ../code/application/views/helpfile/pofields.php:906
 #, php-format
 msgid "+ 36 years old"
-msgstr ""
+msgstr "+36 años"
 
 #: ../code/application/views/helpfile/pofields.php:907
-#, fuzzy, php-format
+#, php-format
 msgid "Change Currency:"
-msgstr "Cambie fechas y moneda"
+msgstr "Cambiar Moneda:"
 
 #: ../code/application/views/helpfile/pofields.php:908
-#, fuzzy, php-format
+#, php-format
 msgid "Destination"
-msgstr "Guías"
+msgstr "Destino"
 
 #: ../code/application/views/helpfile/pofields.php:909
 #, php-format
 msgid "Missing coverage"
-msgstr ""
+msgstr "Falta de cobertura"
 
 #: ../code/application/views/helpfile/pofields.php:910
 #, php-format
 msgid "Coverage start date"
-msgstr ""
+msgstr "Fecha de inicio de la cobertura"
 
 #: ../code/application/views/helpfile/pofields.php:911
 #, php-format
 msgid "Coverage duration (days)"
-msgstr ""
+msgstr "Duración de la cobertura (días)"
 
 #: ../code/application/views/helpfile/pofields.php:912
-#, fuzzy, php-format
+#, php-format
 msgid "Salutation"
-msgstr "Encuesta y Evaluación"
+msgstr "Saludo"
 
 #: ../code/application/views/helpfile/pofields.php:913
 #, php-format
 msgid "Mr"
-msgstr ""
+msgstr "Sr."
 
 #: ../code/application/views/helpfile/pofields.php:914
 #, php-format
 msgid "Miss"
-msgstr ""
+msgstr "Srta."
 
 #: ../code/application/views/helpfile/pofields.php:915
 #, php-format
 msgid "Mrs"
-msgstr ""
+msgstr "Sra."
 
 #: ../code/application/views/helpfile/pofields.php:916
-#, fuzzy, php-format
+#, php-format
 msgid "Ms"
-msgstr "Mes"
+msgstr "Sra."
 
 #: ../code/application/views/helpfile/pofields.php:917
-#, fuzzy, php-format
+#, php-format
 msgid "Invalid First name"
-msgstr "Correo electronico mandado"
+msgstr "Nombre no válido"
 
 #: ../code/application/views/helpfile/pofields.php:918
-#, fuzzy, php-format
+#, php-format
 msgid "Invalid Last name"
-msgstr "Fecha inválida"
+msgstr "Apellido no válido"
 
 #: ../code/application/views/helpfile/pofields.php:919
 #, php-format
 msgid "Missing Birth date"
-msgstr ""
+msgstr "Falta fecha de nacimiento"
 
 #: ../code/application/views/helpfile/pofields.php:920
 #, php-format
 msgid "Birth date"
-msgstr ""
+msgstr "Fecha de nacimiento"
 
 #: ../code/application/views/helpfile/pofields.php:921
 #, php-format
 msgid "Missing Street address"
-msgstr ""
+msgstr "Falta Dirección"
 
 #: ../code/application/views/helpfile/pofields.php:922
 #, php-format
 msgid "Invalid Street address"
-msgstr ""
+msgstr "Dirección no válida"
 
 #: ../code/application/views/helpfile/pofields.php:923
-#, fuzzy, php-format
+#, php-format
 msgid "Street address"
 msgstr "Dirección"
 
 #: ../code/application/views/helpfile/pofields.php:924
 #, php-format
 msgid "Street address additional"
-msgstr ""
+msgstr "Dirección adicional"
 
 #: ../code/application/views/helpfile/pofields.php:925
 #, php-format
 msgid "Missing City"
-msgstr ""
+msgstr "Falta ciudad"
 
 #: ../code/application/views/helpfile/pofields.php:926
-#, fuzzy, php-format
+#, php-format
 msgid "Invalid City"
-msgstr "Fecha inválida"
+msgstr "Ciudad no válida"
 
 #: ../code/application/views/helpfile/pofields.php:927
 #: ../code/application/views/restricted/user_favorite_properties.php:22
@@ -9495,17 +9496,17 @@ msgstr "Ciudad"
 #: ../code/application/views/helpfile/pofields.php:928
 #, php-format
 msgid "Missing Post code"
-msgstr ""
+msgstr "Falta código postal"
 
 #: ../code/application/views/helpfile/pofields.php:929
-#, fuzzy, php-format
+#, php-format
 msgid "Invalid Post code"
-msgstr "Fecha inválida"
+msgstr "Código postal no válido"
 
 #: ../code/application/views/helpfile/pofields.php:930
 #, php-format
 msgid "Post code"
-msgstr ""
+msgstr "Código postal"
 
 #: ../code/application/views/helpfile/pofields.php:931
 #: ../code/application/views/restricted/user_group_quote.php:78
@@ -9519,62 +9520,62 @@ msgstr "País"
 #: ../code/application/views/helpfile/pofields.php:932
 #, php-format
 msgid "Add additional travelers"
-msgstr ""
+msgstr "Agrega viajeros adicionales"
 
 #: ../code/application/views/helpfile/pofields.php:933
-#, fuzzy, php-format
+#, php-format
 msgid "Your insurance details"
-msgstr "Sus detalles"
+msgstr "Los detalles de su seguro"
 
 #: ../code/application/views/helpfile/pofields.php:934
 #, php-format
 msgid "Traveler's name"
-msgstr ""
+msgstr "Nombre del viajero"
 
 #: ../code/application/views/helpfile/pofields.php:935
-#, fuzzy, php-format
+#, php-format
 msgid "Price per day"
-msgstr "Precio por Habitación"
+msgstr "Precio por día"
 
 #: ../code/application/views/helpfile/pofields.php:936
 #, php-format
 msgid "Price for the trip"
-msgstr ""
+msgstr "Precio para el viaje"
 
 #: ../code/application/views/helpfile/pofields.php:937
 #, php-format
 msgid "Missing Payment card number"
-msgstr ""
+msgstr "Falta el número de la tarjeta para el Pago"
 
 #: ../code/application/views/helpfile/pofields.php:938
 #, php-format
 msgid "Invalid Payment card number"
-msgstr ""
+msgstr "Número de tarjeta utilizada para el pago para el pago no es válido"
 
 #: ../code/application/views/helpfile/pofields.php:939
 #, php-format
 msgid "Invalid Payment card CVV number"
-msgstr ""
+msgstr "Número CVV de la tarjeta utilizada en el pago no es válido"
 
 #: ../code/application/views/helpfile/pofields.php:940
 #, php-format
 msgid "Missing Payment card expiry date"
-msgstr ""
+msgstr "Falta de fecha de caducidad de la tarjeta para el pago"
 
 #: ../code/application/views/helpfile/pofields.php:941
-#, fuzzy, php-format
+#, php-format
 msgid "You must accept terms and conditions."
-msgstr "Términos y Condiciones del contrato"
+msgstr "Debe aceptar los términos y condiciones."
 
 #: ../code/application/views/helpfile/pofields.php:943
-#, fuzzy, php-format
+#, php-format
 msgid "Confirm"
-msgstr "Confirmar"
+msgstr "Confirme"
 
 #: ../code/application/views/helpfile/pofields.php:944
 #, php-format
 msgid "Insurance certificate created. Price: %s"
-msgstr ""
+msgstr "Certificado de Seguro creado. Precio: %s"
 
 #: ../code/application/views/review_empty.php:2
 #: ../code/application/views/review_empty-map.php:7
